# SoftwareProjectSummarizer

./: README.md  pyproject.toml
src/software_project_summarizer/: __init__.py  agent.py  cli.py  tools.py  utilities.py
tests/: test_utlities.py
